fix overflow problems on invoice form

--- a/app/assets/stylesheets/components/_invoice-form.scss
+++ b/app/assets/stylesheets/components/_invoice-form.scss
@@ -8,6 +8,11 @@
   .invoice_number {
     flex-wrap: nowrap !important;
   }
+  @media (max-width: 1195px){
+    .items-table-container {
+      overflow-x: auto;
+    }
+  }
   .ss-main {
     width: 100% !important;
     margin-top: 8px;
@@ -243,4 +248,10 @@
   list-style: none;
   padding: 0px;
   text-align: justify;
+}
+.min-width-200 {
+  min-width: 200px;
+}
+.min-width-100 {
+  min-width: 100px;
 }
